basic functions done
three slides done, next will be the description

--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
   </head>
   <body>
     <div class="navibar">
-      <p>Crimes in Philly<button type="button" id="button1">location</button> Find Me</p>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-secondary">left</button>
-        <button type="button" class="btn btn-secondary">Middle</button>
-        <button type="button" class="btn btn-secondary">Right</button>
-      </div>
+      <p>Crimes in Philly</p>
+      <div class='covis'>
+        <input id="rad1" type="radio" name="viz" value="about" checked><label for="rad1">About</label>
+        <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Chorepleth</label>
+        <input id="rad3" type="radio" name="viz" value="torque"><label for="rad3">Timeline</label>
+        <input id="rad4" type="radio" name="viz" value="points"><label for="rad4">Crimes Nearby</label>
+        <button id="btn1">My Location</button>
+        <text id="time-window"></text>
+    </div>
     </div>
     <!-- Sidebar -->
     <div class="carousel-inner hidden-x" id="demo-controllers">
       <div id="controller-1" class="demo-container item active" style="background-color:rgba(0,0,0,0)">
-        <ul id="project-list" class="list-group">
+        <ul id="project-list" class="list-group" style="background-color:rgba(30,30,30,0.7)">
       </div>
     </div>
     <!-- <div class="sidebar">
@@ -32,12 +35,35 @@
       </div>
     </div> -->
     <!-- Map -->
-    <div id="map" class="map"></div>
+    <div id="map" class="map">
+      <div id="legend" class='cartodb-legend choropleth'>
+        <ul>
+          <li class="min">
+            91.00
+          </li>
+          <li class="max">
+            1342.00
+          </li>
+          <li class="graph count_441">
+            <div class="colors">
+              <div class="quartile" style="background-color:#FFFFB2"></div>
+              <div class="quartile" style="background-color:#FED976"></div>
+              <div class="quartile" style="background-color:#FEB24C"></div>
+              <div class="quartile" style="background-color:#FD8D3C"></div>
+              <div class="quartile" style="background-color:#FC4E2A"></div>
+              <div class="quartile" style="background-color:#E31A1C"></div>
+              <div class="quartile" style="background-color:#B10026"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
     <!-- Javascript Imports -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.js"></script>
+    <script src="js/torque.full.js"></script>
     <script src="js/funcs.js"></script>
     <script src="js/setup.js"></script>
   </body>
