finish most of the functions
click sidebar need to be finished

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
       </div>
     </div> -->
     <!-- Map -->
+    <div class="carousel-inner hidden-x" id="demo-controllers2">
+      <p style="font-size:20px">A project by</p>
+      <h2>Yi Xu</h2>
+      <p style="padding:50px 50px 50px 50px;font-size:20px">
+          This is a web mapping interface displaying the crimes in Philly during the time period from 2015-01-01 to 2016-04-12.<br>
+          It aims to help the citizens in Philadelphia know more about crimes in the neighborhood and avoid the dangerous corners.<br>
+          Data Source: <a href="https://www.opendataphilly.org/dataset/crime-incidents/resource/3e00a40d-8444-418c-b3a6-bef5524b90a2">Year-to-Date Part I Crime Incidents</a>
+          <br>
+          See on Github: <a href="https://github.com/Roxyi/crimesinphilly">Github</a>
+      </p>
+    </div>
     <div id="map" class="map">
       <div id="legend" class='cartodb-legend choropleth'>
         <ul>
@@ -46,13 +57,13 @@
           </li>
           <li class="graph count_441">
             <div class="colors">
-              <div class="quartile" style="background-color:#FFFFB2"></div>
-              <div class="quartile" style="background-color:#FED976"></div>
-              <div class="quartile" style="background-color:#FEB24C"></div>
-              <div class="quartile" style="background-color:#FD8D3C"></div>
-              <div class="quartile" style="background-color:#FC4E2A"></div>
-              <div class="quartile" style="background-color:#E31A1C"></div>
-              <div class="quartile" style="background-color:#B10026"></div>
+              <div class="quartile" style="background-color:#ffffff"></div>
+              <div class="quartile" style="background-color:#fff1df"></div>
+              <div class="quartile" style="background-color:#ffe4bd"></div>
+              <div class="quartile" style="background-color:#ffd499"></div>
+              <div class="quartile" style="background-color:#ffc574"></div>
+              <div class="quartile" style="background-color:#ffb649"></div>
+              <div class="quartile" style="background-color:#ffa500"></div>
             </div>
           </li>
         </ul>
