--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
         <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Chorepleth</label>
         <input id="rad3" type="radio" name="viz" value="torque"><label for="rad3">Timeline</label>
         <input id="rad4" type="radio" name="viz" value="points"><label for="rad4">Crimes Nearby</label>
-        <button id="btn1">My Location</button>
-        <text id="time-window"></text>
     </div>
     </div>
     <!-- Sidebar -->
@@ -47,6 +45,7 @@
       </p>
     </div>
     <div id="map" class="map">
+      <button id="btn1">My Location</button>
       <div id="legend" class='cartodb-legend choropleth'>
         <ul>
           <li class="min">
@@ -71,8 +70,10 @@
     </div>
     <!-- Javascript Imports -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
+    <!-- <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script> -->
+    <script src="http://libs.cartocdn.com/cartodb.js/v3/3.13/cartodb_nojquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.2.3/leaflet.draw.js"></script>
     <script src="js/torque.full.js"></script>
     <script src="js/funcs.js"></script>
