--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Crimesinphilly</h1>
+          <h1>Crimes in Philly</h1>
           <p>A Web Map Shows the Crimes in Philly</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Roxyi">Roxyi</a></span>
