change button position and add animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Chorepleth</label>
         <input id="rad3" type="radio" name="viz" value="torque"><label for="rad3">Timeline</label>
         <input id="rad4" type="radio" name="viz" value="points"><label for="rad4">Crimes Nearby</label>
+        <span id="icon" class="glyphicons glyphicons-hand-up"></span>
     </div>
     </div>
     <!-- Sidebar -->
@@ -46,6 +47,8 @@
     </div>
     <div id="map" class="map">
       <button id="btn1">My Location</button>
+      <span class="dashicons dashicons-arrow-up-alt"></span>
+      <img id="finger" src="http://www.clker.com/cliparts/9/1/1/6/12247849541307080526radacina_cursor_hand.svg.med.png">
       <div id="legend" class='cartodb-legend choropleth'>
         <ul>
           <li class="min">
