change to points
when you click markers, the sidebar will change as well

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>Crimes in Philly</p>
       <div class='covis'>
         <input id="rad1" type="radio" name="viz" value="about" checked><label for="rad1">About</label>
-        <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Chorepleth</label>
+        <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Choropleth</label>
         <input id="rad3" type="radio" name="viz" value="heatmap"><label for="rad3">Heat Map</label>
         <input id="rad4" type="radio" name="viz" value="points"><label for="rad4">Crimes Nearby</label>
         <span id="icon" class="glyphicons glyphicons-hand-up"></span>
