fixed bug and remove geolocation

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       </p>
     </div>
     <div id="map" class="map">
-      <button id="btn1">My Location</button>
-      <span class="dashicons dashicons-arrow-up-alt"></span>
+      <!-- <button id="btn1">My Location</button> -->
       <img id="finger" src="http://www.clker.com/cliparts/9/1/1/6/12247849541307080526radacina_cursor_hand.svg.med.png">
       <div id="legend" class='cartodb-legend choropleth'>
         <ul>
