--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ It aims to help the citizens in Philadelphia know more about crimes in the neigh
 
 <p>The data is stored on <a href="https://yixu0215.cartodb.com/viz/fa797b26-021e-11e6-b8d9-0ea31932ec1d/public_map">CartoDB</a>. I mainly used leaflet.js and CartoDB.js to build the web map. Actually, to solve the conflict between CartoDB.js and jQuery, I used cartodb_nojquery.js. It enabled me to display the torque layer.</p>
 
-<p>An alternative URL of the project is: <a href="http://crimesinphilly.com/">crimesinphilly.com</a>. I use AWS to host the website. However, for some reason, I cannot use geolocation function on Chrome with an http domain. I am still trying to figure out how to get an https domain. Therefore, if you use the alternative URL to browse the website, you may need to use Firefox to enable the geolocation function.</p>
+<p>An alternative URL of the project is: <a href="http://crimesinphilly.com/">crimesinphilly.com</a>. </p>
 
 <p>Acknowledgement:
 Thank <a href="https://github.com/moradology">Nathan Zimmerman</a> and <a href="https://github.com/jfrankl">Jeff Frankl</a> for helping me on the code. They are the instructors of my JavaScript class. Follow them if you are interested in their projects.</p>
