--- a/crimesinphilly.html
+++ b/crimesinphilly.html
@@ -15,9 +15,10 @@
       <p>Crimes in Philly</p>
       <div class='covis'>
         <input id="rad1" type="radio" name="viz" value="about" checked><label for="rad1">About</label>
-        <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Chorepleth</label>
-        <input id="rad3" type="radio" name="viz" value="torque"><label for="rad3">Timeline</label>
+        <input id="rad2" type="radio" name="viz" value="census"><label for="rad2">Choropleth</label>
+        <input id="rad3" type="radio" name="viz" value="heatmap"><label for="rad3">Heat Map</label>
         <input id="rad4" type="radio" name="viz" value="points"><label for="rad4">Crimes Nearby</label>
+        <span id="icon" class="glyphicons glyphicons-hand-up"></span>
     </div>
     </div>
     <!-- Sidebar -->
@@ -45,7 +46,8 @@
       </p>
     </div>
     <div id="map" class="map">
-      <button id="btn1">My Location</button>
+      <!-- <button id="btn1">My Location</button> -->
+      <img id="finger" src="http://www.clker.com/cliparts/9/1/1/6/12247849541307080526radacina_cursor_hand.svg.med.png">
       <div id="legend" class='cartodb-legend choropleth'>
         <ul>
           <li class="min">
